--- a/index.html
+++ b/index.html
@@ -3,31 +3,22 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Pokedex</title>
-    <link rel="icon" href="favicons/favicon-16x16.png">
+    <title>Document</title>
     <link rel="stylesheet" href="Css/estilo.css">
-    <script defer src="JS/script.js"></script>
 </head>
 <body>
-    <main>
-        <img src="#" alt="Pokemon" class="pokemon__image">
-        <h1 class="pokemon__data">
-        <span class="pokemon__number"></span> -
-        <span class="pokemon__name"></span>
-    </h1>
-    <form class="form">
-        <input 
-        type="search"
-        class="input__search"
-        placeholder="Name or Number"
-        required
-        />
-    </form>
-    <div class="buttons">
-        <button class="button btn-prev">&gt;Prev&lt;</button>
-        <button class="button btn-next">&gt;Next&lt;</button>
-    </div>
-    <img src="imgs/pokedex.png" alt="pokedex" class="pokedex">
-    </main>
+    <header>
+        <nav>
+            <ul class="navBar">
+                <li><a href="index.html">Inicio</a></li>
+                <li><a href="sobre.html">Sobre</a></li>
+                <li><a href="pokedex.html">Pokedex</a></li>
+                <li><a href="">Treinadores</a></li>
+                <li><a href="">Jogos</a></li>
+            </ul>
+        
+        </nav>
+    
+    </header>
 </body>
 </html>
