--- a/pokedex.html
+++ b/pokedex.html
@@ -24,7 +24,7 @@
 </header>
     <main>
         <section>
-            <img src="#" alt="Pokemon" class="pokemon__image">
+            <img src="" alt="Pokemon" class="pokemon__image">
             <h1 class="pokemon__data">
             <span class="pokemon__number"></span> -
             <span class="pokemon__name"></span>
