--- a/pokedex.html
+++ b/pokedex.html
@@ -11,12 +11,14 @@
 <body> <!-- Início do corpo da página -->
 <header> <!-- Cabeçalho da página, geralmente contém a navegação principal -->
     <nav> <!-- Elemento que envolve os links de navegação -->
+        <a class="Logo" href=""></a>
         <ul class="navBar"> <!-- Lista não ordenada que serve como menu de navegação -->
             <li><a href="index.html">Inicio</a></li> <!-- Link para a página inicial -->
             <li><a href="sobre.html">Sobre</a></li> <!-- Link para a página sobre -->
             <li><a href="">Pokedex</a></li> <!-- Link para a Pokédex, sem URL definida ainda -->
             <li><a href="">Treinadores</a></li> <!-- Link para a página de Treinadores -->
             <li><a href="">Jogos</a></li> <!-- Link para a página de Jogos -->
+
         </ul>
     </nav>
 </header>
