--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
         <nav>
             <ul class="navBar">
                 <li><a href="index.html">Inicio</a></li>
-                <li><a href="sobre.html">Sobre</a></li>
+                <li><a href="">Sobre</a></li>
                 <li><a href="pokedex.html">Pokedex</a></li>
                 <li><a href="">Treinadores</a></li>
                 <li><a href="">Jogos</a></li>
