--- a/index.html
+++ b/index.html
@@ -1,24 +1,29 @@
-<!DOCTYPE html>
-<html lang="en">
+<!DOCTYPE html> <!-- Declara que o documento é HTML5 -->
+<html lang="en"> <!-- Início do documento HTML, com atributo de idioma configurado para inglês (en) -->
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
-    <link rel="stylesheet" href="Css/estilo.css">
+    <meta charset="UTF-8"> <!-- Define a codificação de caracteres como UTF-8 para garantir que todos os caracteres sejam exibidos corretamente -->
+    <meta name="viewport" content="width=device-width, initial-scale=1.0"> <!-- Torna a página responsiva, adaptando o layout à largura da tela do dispositivo -->
+    <title>Pokedex</title> <!-- Define o título da página que aparece na aba do navegador -->
+    <link rel="icon" href="favicons/favicon-16x16.png"> <!-- Define o ícone da página que aparece na aba do navegador -->
+    <link rel="stylesheet" href="Css/estilo.css"> <!-- Vincula o arquivo CSS que contém a estilização da página -->
+    <script defer src="JS/script.js"></script> <!-- Vincula o arquivo JavaScript, e o "defer" garante que ele será carregado depois que o HTML for completamente carregado -->
 </head>
-<body>
-    <header>
-        <nav>
-            <ul class="navBar">
-                <li><a href="index.html">Inicio</a></li>
-                <li><a href="">Sobre</a></li>
-                <li><a href="pokedex.html">Pokedex</a></li>
-                <li><a href="">Treinadores</a></li>
-                <li><a href="">Jogos</a></li>
-            </ul>
-        
-        </nav>
-    
-    </header>
-</body>
-</html>
+<body> <!-- Início do corpo da página -->
+<header> <!-- Cabeçalho da página, geralmente contém a navegação principal -->
+    <nav> <!-- Elemento que envolve os links de navegação -->
+        <a class="Logo" href=""></a>
+        <div class="mobile-menu">
+        <div class="line1"></div>
+        <div class="line2"></div>
+        <div class="line3"></div>
+    </div>
+        <ul class="navBar"> <!-- Lista não ordenada que serve como menu de navegação -->
+            <li><a href="index.html">Inicio</a></li> <!-- Link para a página inicial -->
+            <li><a href="sobre.html">Sobre</a></li> <!-- Link para a página sobre -->
+            <li><a href="">Pokedex</a></li> <!-- Link para a Pokédex, sem URL definida ainda -->
+            <li><a href="">Treinadores</a></li> <!-- Link para a página de Treinadores -->
+            <li><a href="">Jogos</a></li> <!-- Link para a página de Jogos -->
+
+        </ul>
+    </nav>
+</header>
