--- a/pokedex.html
+++ b/pokedex.html
@@ -12,6 +12,11 @@
 <header> <!-- Cabeçalho da página, geralmente contém a navegação principal -->
     <nav> <!-- Elemento que envolve os links de navegação -->
         <a class="Logo" href=""></a>
+        <div class="mobile-menu">
+        <div class="line1"></div>
+        <div class="line2"></div>
+        <div class="line3"></div>
+    </div>
         <ul class="navBar"> <!-- Lista não ordenada que serve como menu de navegação -->
             <li><a href="index.html">Inicio</a></li> <!-- Link para a página inicial -->
             <li><a href="sobre.html">Sobre</a></li> <!-- Link para a página sobre -->
