--- a/index.html
+++ b/index.html
@@ -19,8 +19,8 @@
     </div>
         <ul class="navBar"> <!-- Lista não ordenada que serve como menu de navegação -->
             <li><a href="index.html">Inicio</a></li> <!-- Link para a página inicial -->
-            <li><a href="sobre.html">Sobre</a></li> <!-- Link para a página sobre -->
-            <li><a href="">Pokedex</a></li> <!-- Link para a Pokédex, sem URL definida ainda -->
+            <li><a href="">Sobre</a></li> <!-- Link para a página sobre -->
+            <li><a href="pokedex.html">Pokedex</a></li> <!-- Link para a Pokédex, sem URL definida ainda -->
             <li><a href="">Treinadores</a></li> <!-- Link para a página de Treinadores -->
             <li><a href="">Jogos</a></li> <!-- Link para a página de Jogos -->
 
